crates/component-shape-gpui/tests/ui/invalid_mcp_input.stderr
error: unknown `mcp_input` shorthand `strings`; use a supported McpInput constructor name or an explicit `McpInput` expression
  --> tests/ui/invalid_mcp_input.rs:15:17
   |
15 |     mcp_input = strings
   |                 ^^^^^^^
